--- a/Pascal/Pascal.csproj
+++ b/Pascal/Pascal.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{171F600B-F02C-40F3-A3BE-6917F38FDF63}</ProjectGuid>
+    <ProjectGuid>{354BDB4B-1297-4926-A33B-6E3708555EBA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Compiler</RootNamespace>
-    <AssemblyName>Compiler</AssemblyName>
+    <RootNamespace>Pascal</RootNamespace>
+    <AssemblyName>Pascal</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,18 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\EofToken.cs" />
-    <Compile Include="Messages\LoggerEventHandler.cs" />
-    <Compile Include="Messages\MessageHandler.cs" />
-    <Compile Include="Messages\MessageType.cs" />
-    <Compile Include="Core\Parser.cs" />
+    <Compile Include="PascalParserTD.cs" />
+    <Compile Include="PascalScanner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\Scanner.cs" />
-    <Compile Include="Core\Source.cs" />
-    <Compile Include="Core\Token.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Factory\" />
+    <ProjectReference Include="..\Compiler\Compiler.csproj">
+      <Project>{171f600b-f02c-40f3-a3be-6917f38fdf63}</Project>
+      <Name>Compiler</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
