--- a/Backend/Backend.csproj
+++ b/Backend/Backend.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{171F600B-F02C-40F3-A3BE-6917F38FDF63}</ProjectGuid>
+    <ProjectGuid>{6B06E7A4-FFD5-42FF-8B79-EC3C5F6000E4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Compiler</RootNamespace>
-    <AssemblyName>Compiler</AssemblyName>
+    <RootNamespace>Backend</RootNamespace>
+    <AssemblyName>Backend</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,20 +39,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\Code.cs" />
-    <Compile Include="Core\EofToken.cs" />
-    <Compile Include="Core\ICode.cs" />
-    <Compile Include="Core\SymTab.cs" />
-    <Compile Include="Messages\LoggerEventHandler.cs" />
-    <Compile Include="Messages\MessageHandler.cs" />
-    <Compile Include="Messages\MessageType.cs" />
-    <Compile Include="Core\Parser.cs" />
+    <Compile Include="Compiler.cs" />
+    <Compile Include="FrontenedFactory.cs" />
+    <Compile Include="Interpreter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Core\Scanner.cs" />
-    <Compile Include="Core\Source.cs" />
-    <Compile Include="Core\Token.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Compiler\Compiler.csproj">
+      <Project>{171f600b-f02c-40f3-a3be-6917f38fdf63}</Project>
+      <Name>Compiler</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Pascal\Pascal.csproj">
+      <Project>{354bdb4b-1297-4926-a33b-6e3708555eba}</Project>
+      <Name>Pascal</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Factory\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
