--- a/trunk/Backend/Backend.csproj
+++ b/trunk/Backend/Backend.csproj
@@ -39,9 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Backend.cs" />
+    <Compile Include="Factory\BackendFactory.cs" />
+    <Compile Include="CodeGenerator.cs" />
     <Compile Include="Compiler.cs" />
-    <Compile Include="FrontenedFactory.cs" />
+    <Compile Include="Executor.cs" />
+    <Compile Include="Factory\FrontenedFactory.cs" />
     <Compile Include="Interpreter.cs" />
+    <Compile Include="Listeners\BackendMessageHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -54,9 +59,7 @@
       <Name>Pascal</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Factory\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
