--- a/trunk/Pascal/Pascal.csproj
+++ b/trunk/Pascal/Pascal.csproj
@@ -41,7 +41,10 @@
   <ItemGroup>
     <Compile Include="PascalParserTD.cs" />
     <Compile Include="PascalScanner.cs" />
+    <Compile Include="PascalToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tokens\PascalStringToken.cs" />
+    <Compile Include="Tokens\PascalWordToken.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Compiler\Compiler.csproj">
