--- a/trunk/ConsoleApp/ConsoleApp.csproj
+++ b/trunk/ConsoleApp/ConsoleApp.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Sources\File1.txt" />
+    <Content Include="Sources\scannertest.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
