--- a/trunk/Compiler/Compiler.csproj
+++ b/trunk/Compiler/Compiler.csproj
@@ -40,7 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Code.cs" />
-    <Compile Include="Core\EofToken.cs" />
+    <Compile Include="Messages\TokenEventHandler.cs" />
+    <Compile Include="Token\EofToken.cs" />
     <Compile Include="Core\ICode.cs" />
     <Compile Include="Core\SymTab.cs" />
     <Compile Include="Messages\LoggerEventHandler.cs" />
@@ -50,8 +51,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Scanner.cs" />
     <Compile Include="Core\Source.cs" />
-    <Compile Include="Core\Token.cs" />
-    <Compile Include="TokenType.cs" />
+    <Compile Include="Token\EolToken.cs" />
+    <Compile Include="Token\Token.cs" />
+    <Compile Include="Token\TokenType.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
