--- a/trunk/ConsoleApp/ConsoleApp.csproj
+++ b/trunk/ConsoleApp/ConsoleApp.csproj
@@ -63,6 +63,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Sources\specialtoken.txt" />
     <Content Include="Sources\stringscanner.txt" />
     <Content Include="Sources\scannertoken.txt" />
     <Content Include="Sources\File1.txt" />
