--- a/Compiler/Compiler.csproj
+++ b/Compiler/Compiler.csproj
@@ -55,7 +55,12 @@
     <Compile Include="Token\Token.cs" />
     <Compile Include="Token\TokenType.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Intermediate\Intermediate.csproj">
+      <Project>{69d3a7c5-89a3-4279-93c0-ca88a6d598b3}</Project>
+      <Name>Intermediate</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
