--- a/CompilerTest/CompilerTest.csproj
+++ b/CompilerTest/CompilerTest.csproj
@@ -52,11 +52,20 @@
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymTabTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Backend\Backend.csproj">
+      <Project>{6b06e7a4-ffd5-42ff-8b79-ec3c5f6000e4}</Project>
+      <Name>Backend</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Compiler\Compiler.csproj">
       <Project>{171f600b-f02c-40f3-a3be-6917f38fdf63}</Project>
       <Name>Compiler</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Intermediate\Intermediate.csproj">
+      <Project>{69d3a7c5-89a3-4279-93c0-ca88a6d598b3}</Project>
+      <Name>Intermediate</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
