--- a/Pascal/Pascal.csproj
+++ b/Pascal/Pascal.csproj
@@ -56,6 +56,10 @@
       <Project>{171f600b-f02c-40f3-a3be-6917f38fdf63}</Project>
       <Name>Compiler</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Intermediate\Intermediate.csproj">
+      <Project>{69d3a7c5-89a3-4279-93c0-ca88a6d598b3}</Project>
+      <Name>Intermediate</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
