--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrossReferencer.cs" />
+    <Compile Include="ParserTreePrint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
