Parsing Expressions and Trees , Compund Parser, Assignment Parser,

--- a/Pascal/Pascal.csproj
+++ b/Pascal/Pascal.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Parsers\AssignmentStatementParser.cs" />
     <Compile Include="Parsers\CompoundStatementParser.cs" />
+    <Compile Include="Parsers\ExpressionParser.cs" />
     <Compile Include="Parsers\IParserStatement.cs" />
     <Compile Include="Listeners\PascalMessageListener.cs" />
     <Compile Include="Parsers\StatementParser.cs" />
