--- a/CompilerTest/CompilerTest.csproj
+++ b/CompilerTest/CompilerTest.csproj
@@ -51,7 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CodeNodeTest.cs" />
-    <Compile Include="CompStatementTest.cs" />
+    <Compile Include="ParsingExpressionsAndStatments.cs" />
     <Compile Include="PascalHelper.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -75,6 +75,7 @@
     <Content Include="Sources\CodeNodeTest.txt" />
     <Content Include="Sources\CompoundTest1.txt" />
     <Content Include="Sources\File1.txt" />
+    <Content Include="Sources\AssignTest.txt" />
     <Content Include="Sources\symTabTest.txt" />
   </ItemGroup>
   <Choose>
