--- a/CompilerTest/CompilerTest.csproj
+++ b/CompilerTest/CompilerTest.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CodeNodeTest.cs" />
+    <Compile Include="InterpretingControlStatements.cs" />
     <Compile Include="ParsingExpressionsAndStatments.cs" />
     <Compile Include="PascalHelper.cs" />
     <Compile Include="UnitTest1.cs" />
@@ -78,6 +79,7 @@
   <ItemGroup>
     <Content Include="Sources\CodeNodeTest.txt" />
     <Content Include="Sources\CompoundTest1.txt" />
+    <Content Include="Sources\InterpretingTest1.txt" />
     <Content Include="Sources\File1.txt" />
     <Content Include="Sources\AssignTest.txt" />
     <Content Include="Sources\symTabTest.txt" />
