--- a/CompilerTest/CompilerTest.csproj
+++ b/CompilerTest/CompilerTest.csproj
@@ -82,6 +82,7 @@
     <Content Include="Sources\CodeNodeTest.txt" />
     <Content Include="Sources\CompoundTest1.txt" />
     <Content Include="Sources\ControlStatements\While_Test1.txt" />
+    <Content Include="Sources\InterpretingControlStatements\While_Test1.txt" />
     <Content Include="Sources\InterpretingTest1.txt" />
     <Content Include="Sources\File1.txt" />
     <Content Include="Sources\AssignTest.txt" />
