--- a/CompilerTest/CompilerTest.csproj
+++ b/CompilerTest/CompilerTest.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Content Include="Sources\CodeNodeTest.txt" />
     <Content Include="Sources\CompoundTest1.txt" />
+    <Content Include="Sources\ControlStatements\Repeat_Test1.txt" />
     <Content Include="Sources\ControlStatements\While_Test1.txt" />
     <Content Include="Sources\InterpretingControlStatements\While_Test1.txt" />
     <Content Include="Sources\InterpretingTest1.txt" />
