--- a/CompilerTest/CompilerTest.csproj
+++ b/CompilerTest/CompilerTest.csproj
@@ -53,6 +53,7 @@
     <Compile Include="CodeNodeTest.cs" />
     <Compile Include="ControlStatmentsTest.cs" />
     <Compile Include="BlockParserTest.cs" />
+    <Compile Include="InterpretingPascalPrograms.cs" />
     <Compile Include="TypeDefinitionParserTest.cs" />
     <Compile Include="ParserExceptions.cs" />
     <Compile Include="InterpretingControlStatements.cs" />
@@ -88,6 +89,7 @@
     <Content Include="Sources\ControlStatements\While_Test1.txt" />
     <Content Include="Sources\BlockParser\BlockParser1.txt" />
     <Content Include="Sources\InterpretingControlStatements\While_Test1.txt" />
+    <Content Include="Sources\InterpretingPascalPrograms\Test1.txt" />
     <Content Include="Sources\InterpretingTest1.txt" />
     <Content Include="Sources\File1.txt" />
     <Content Include="Sources\AssignTest.txt" />
